# MediaHubSync

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  requests.rs  ui.rs  watcher.rs
ui/: mainwindow.slint
