[package]
name = "MediaHubSync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
env_logger = "0.10.1"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
notify = "6.1.1"
reqwest = {version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
slint = "1.3.2"
tokio = {version="1.35.1", features = ["full"] }

[build-dependencies]
slint-build = "1.3.0"


