[package]
name = "MediaHubSync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
eframe = "0.25.0"
egui_extras = {version = "0.25.0", features = ["all_loaders"] }
env_logger = "0.10.1"
fs_extra = "1.3.0"
futures = "0.3.30"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
notify = "6.1.1"
reqwest = {version = "0.11.23", features = ["json"] }
rfd = "0.13.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = {version="1.35.1", features = ["full"] }
widestring = "1.0.2"
win-msgbox = "0.1.2"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
